--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,22 +1,3 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Dark application theme -->
-    <style name="Theme.Finad.Dark" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color: Dark Slate -->
-        <item name="colorPrimary">#1E2A2F</item>
-        <item name="colorPrimaryVariant">#263238</item>
-        <item name="colorOnPrimary">#FFFFFF</item>
-
-        <!-- Secondary brand color: Emerald Green -->
-        <item name="colorSecondary">#2ECC71</item>
-        <item name="colorSecondaryVariant">#27AE60</item>
-        <item name="colorOnSecondary">#FFFFFF</item>
-
-        <!-- Dark theme background -->
-        <item name="colorSurface">#1E1E1E</item>
-        <item name="colorOnBackground">#E0E0E0</item>
-        <item name="colorOnSurface">#E0E0E0</item>
-
-        <!-- Status bar color -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-    </style>
+<resources>
+    <style name="Theme.Finad" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
