--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,20 +1,3 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.Finad" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color: Slate Gray -->
-        <item name="colorPrimary">#2F3E46</item>
-        <item name="colorPrimaryVariant">#354F52</item>
-        <item name="colorOnPrimary">#FFFFFF</item>
-
-        <!-- Secondary brand color: Emerald Green -->
-        <item name="colorSecondary">#2ECC71</item>
-        <item name="colorSecondaryVariant">#27AE60</item>
-        <item name="colorOnSecondary">#FFFFFF</item>
-
-        <!-- Background & surface -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <item name="colorSurface">#FFFFFF</item>
-        <item name="colorOnBackground">#1C1C1C</item>
-        <item name="colorOnSurface">#1C1C1C</item>
-    </style>
+<resources>
+    <style name="Theme.Finad" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
